add: Sections to index.html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     <title>Deanna Carina Sale | Resume</title>
 </head>
 <body>
+    <header>
 
+    </header>
+    <section>
 
- 
+    </section>
+    <footer>
+        
+    </footer>
 </body>
 </html>
