--- a/index.html
+++ b/index.html
@@ -14,18 +14,35 @@
 </head>
 <body>
     <header>
-        <div class="row">
+        <div class="row no-gutters">
             <a href="index.html" class="col-md-4 logo">
 
             </a>
             <div class="col-md-8">
-                <div class="row bg-color-name-title">
+                <div class="row bg-color-name-title no-gutters">
                     <div class="col heading">
                         <h1 class="name">Deanna Carina Sale</h1>
                         <h2 class="title">Full-Stack Software Developer</h2>
                     </div>
                 </div>
-
+                <div class="row no-gutters">
+                    <div class="col">
+                        <ul id="nav" class="list-inline menu-container">
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menu-item hvr-sweep-to-bottom">
+                                <a href="#"><i class="fas fa-home" aria-hidden="true"></i><span>Home</span></a>
+                            </li>
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menu-item hvr-sweep-to-bottom">
+                                <a href="#"><i class="fas fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                            </li>
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menu-item hvr-sweep-to-bottom">
+                                <a href="#"><i class="fas fa-comment" aria-hidden="true"></i><span>Contact</span></a>
+                            </li>
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-cv menu-item hvr-sweep-to-bottom">
+                                <a href="#"><i class="fas fa-download" aria-hidden="true"></i><span>CV Download</span></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
