add: Footer with stylings

--- a/index.html
+++ b/index.html
@@ -49,8 +49,55 @@
     <section>
 
     </section>
-    <footer>
-
+    <footer class="container-fluid">
+        <div id="footer-details" class="row">
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">About</h5>
+                <p class="inline-block">
+                    Full-stack software developer. Experience in HTML, CSS, JavaScript, Python, GitHub, Heroku, 
+                    Bootstrap, Django, SQL, communication, teamworking, collaboration. Capacity for structural and design thinking.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">CV Download</h5>
+                <p class="inline-block">
+                    Need a printable version of my CV? <br>Download it here.
+                    <a href="#" target="_blank" class="cv-pdf">
+                        <i class="fas fa-download" aria-hidden="true"></i>
+                        <span class="sr-only">Download Link.</span>
+                    </a>
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">Social</h5>
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a href="https://www.facebook.com/DeannaCarina/" target="_blank">
+                            <i class="fab fa-facebook-square" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://github.com/DeannaCarina" target="_blank">
+                            <i class="fab fa-github-square" aria-hidden="true"></i>
+                            <span class="sr-only">GitHub</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.instagram.com/deannacarina/" target="_blank">
+                            <i class="fab fa-instagram-square" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.linkedin.com/in/deannacarina/" target="_blank">
+                            <i class="fab fa-linkedin" aria-hidden="true"></i>
+                            <span class="sr-only">LinkedIn</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
