add: Resume and contact pages

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Online resume of Deanna Carina Sale">
     <meta name="keywords" content="Resume, CV, Deanna Sale, Software Developer">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <title>Deanna Carina Sale</title>
+    <title>Deanna Carina Sale | Contact</title>
 </head>
 <body>
     <header>
