--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menu-container">
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menu-item hvr-sweep-to-bottom">
-                                <a href="#"><i class="fas fa-home" aria-hidden="true"></i><span>Home</span></a>
+                                <a href="index.html"><i class="fas fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menu-item hvr-sweep-to-bottom">
-                                <a href="#"><i class="fas fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                                <a href="resume.html"><i class="fas fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menu-item hvr-sweep-to-bottom">
-                                <a href="#"><i class="fas fa-comment" aria-hidden="true"></i><span>Contact</span></a>
+                                <a href="contact.html"><i class="fas fa-comment" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-cv menu-item hvr-sweep-to-bottom">
                                 <a href="#"><i class="fas fa-download" aria-hidden="true"></i><span>CV Download</span></a>
