--- a/index.html
+++ b/index.html
@@ -46,7 +46,115 @@
             </div>
         </div>
     </header>
-    <section>
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">Personal Info</h3>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key uppercase">
+                        <p>
+                            Name:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Deanna Carina Sale
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key uppercase">
+                        <p>
+                            Address:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Preston, PR2 5TR, United Kingdom
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key uppercase">
+                        <p>
+                            Phone Number:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            07990 738 832
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key uppercase">
+                        <p>
+                            Email Address:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            deannacarina@gmail.com
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8 bg-color-three-reasons section-column">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase">About Me</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fas fa-question-circle" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <p>
+                                    I am an aspiring full-stack software developer currently studying with Code Institute.                                 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fas fa-thumbs-up" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <p>
+                                    I follow form as well as function. I know that the aesthetics of effective design combined 
+                                    with application speed, security and reliability combine to create a great user experience.                                     
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fas fa-bolt" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">WHy Hire Me?</h4>
+                                <p>
+                                    I work quickly and effectively in getting things built and working 
+                                    across the stack. I'm an excellent communicator who thrives in bright 
+                                    and enthusiastic teams and I'm also a self starter when working solo.                                    
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </section>
     <footer class="container-fluid">
