--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                                 <a href="index.html"><i class="fas fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menu-item hvr-sweep-to-bottom">
-                                <a href="resume.html"><i class="fas fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                                <a href="resume.html"><i class="fas fa-graduation-cap" aria-hidden="true"></i><span>Resumé</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menu-item hvr-sweep-to-bottom active">
                                 <a href="contact.html"><i class="fas fa-comment" aria-hidden="true"></i><span>Contact</span></a>
