--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@
                                 <a href="index.html"><i class="fas fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menu-item hvr-sweep-to-bottom active">
-                                <a href="resume.html"><i class="fas fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                                <a href="resume.html"><i class="fas fa-graduation-cap" aria-hidden="true"></i><span>Resumé</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menu-item hvr-sweep-to-bottom">
                                 <a href="contact.html"><i class="fas fa-comment" aria-hidden="true"></i><span>Contact</span></a>
@@ -46,8 +46,123 @@
             </div>
         </div>
     </header>
-    <section>
-
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">Work History</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8 bg-color-three-reasons section-column">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase">My Skills</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="skills-icon fas fa-tv" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Front End</h4>
+                                <p>
+                                    I'm skilled in User Experience Design using the trinity of HTML, CSS and Javascript.
+                                </p>                                
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="skills-icon fas fa-cogs" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Back End</h4>
+                                <p>
+                                    I specialize in data-driven web applications. Many of my projects utilise document-based data. I use Python 
+                                    and Django to process and present information.                                    
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row progress-section">
+                    <div class="col">
+                        <div class="progress">
+                            <div class="progress-bar prog-html" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                <span class="sr-only">80% Complete</span>
+                            </div>
+                            <span class="progress-type">HTML/HTML5</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar prog-css" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                <span class="sr-only">70% Complete</span>
+                            </div>
+                            <span class="progress-type">CSS/CSS3/Bootstrap</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar prog-js" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+                                <span class="sr-only">40% Complete</span>
+                            </div>
+                            <span class="progress-type">JavaScript/JQuery</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar prog-python" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
+                                <span class="sr-only">50% Complete</span>
+                            </div>
+                            <span class="progress-type">Python/Django</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar prog-github" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                                <span class="sr-only">90% Complete</span>
+                            </div>
+                            <span class="progress-type">GitHub</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar prog-heroku" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                <span class="sr-only">70% Complete</span>
+                            </div>
+                            <span class="progress-type">Heroku</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar prog-sql" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100" style="width:5%">
+                                <span class="sr-only">5% Complete</span>
+                            </div>
+                            <span class="progress-type">SQL</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar prog-php" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:10%">
+                                <span class="sr-only">10% Complete</span>
+                            </div>
+                            <span class="progress-type">PHP</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar prog-gcp" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width:15%">
+                                <span class="sr-only">15% Complete</span>
+                            </div>
+                            <span class="progress-type">GCP</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar prog-aws" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width:20%">
+                                <span class="sr-only">20% Complete</span>
+                            </div>
+                            <span class="progress-type">AWS</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar prog-mongo" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100" style="width:5%">
+                                <span class="sr-only">5% Complete</span>
+                            </div>
+                            <span class="progress-type">MongoDB</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
