--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
                         <h3 class="section-heading uppercase">Work History</h3>
@@ -84,8 +84,41 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
                                 <p>
-                                    I specialize in data-driven web applications. Many of my projects utilise document-based data. I use Python 
-                                    and Django to process and present information.                                    
+                                    I am currently working through a Software Development Diploma accredited by Edinburgh University and
+                                    achieving high grades in all back-end languages and frameworks.                                    
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="skills-icon fas fa-users" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Collaboration</h4>
+                                <p>
+                                    Having worked collaboratively on a number of projects, I am skilled in agile software development, 
+                                    as well as a highly effective team communicator and motivator.                                   
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="skills-icon fas fa-globe" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Deployed Projects</h4>
+                                <p>
+                                    <ul class="project-list">
+                                        <li><a href="https://deannacarina.github.io/travelcaribbean/" target="_blank" class="deployed-project">Portfolio Project 1 for Code Institute</a></li>
+                                        <li><a href="https://deannacarina.github.io/HarryPotterQuiz/" target="_blank" class="deployed-project">Portfolio Project 2 for Code Institute</a></li>
+                                        <li><a href="https://startrek-timeloop.herokuapp.com/" target="_blank" class="deployed-project">Portfolio Project 3 for Code Institute</a></li>
+                                        <li><a href="https://www.deeandtom.love/" target="_blank" class="deployed-project">Wedding Website for Dee & Tom</a></li>
+                                        <li><a href="https://deannacarina.github.io/woodnook/" target="_blank" class="deployed-project">Business Website for 'Wood Nook'</a></li>
+                                    </ul>                              
                                 </p>
                             </div>
                         </div>
@@ -94,67 +127,67 @@
                 <div class="row progress-section">
                     <div class="col">
                         <div class="progress">
-                            <div class="progress-bar prog-html" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
                                 <span class="sr-only">80% Complete</span>
                             </div>
                             <span class="progress-type">HTML/HTML5</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar prog-css" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
                                 <span class="sr-only">70% Complete</span>
                             </div>
                             <span class="progress-type">CSS/CSS3/Bootstrap</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar prog-js" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
                                 <span class="sr-only">40% Complete</span>
                             </div>
                             <span class="progress-type">JavaScript/JQuery</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar prog-python" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
                                 <span class="sr-only">50% Complete</span>
                             </div>
                             <span class="progress-type">Python/Django</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar prog-github" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
                                 <span class="sr-only">90% Complete</span>
                             </div>
                             <span class="progress-type">GitHub</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar prog-heroku" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
                                 <span class="sr-only">70% Complete</span>
                             </div>
                             <span class="progress-type">Heroku</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar prog-sql" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100" style="width:5%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100" style="width:5%">
                                 <span class="sr-only">5% Complete</span>
                             </div>
                             <span class="progress-type">SQL</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar prog-php" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:10%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:10%">
                                 <span class="sr-only">10% Complete</span>
                             </div>
                             <span class="progress-type">PHP</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar prog-gcp" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width:15%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width:15%">
                                 <span class="sr-only">15% Complete</span>
                             </div>
                             <span class="progress-type">GCP</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar prog-aws" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width:20%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width:20%">
                                 <span class="sr-only">20% Complete</span>
                             </div>
                             <span class="progress-type">AWS</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar prog-mongo" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100" style="width:5%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100" style="width:5%">
                                 <span class="sr-only">5% Complete</span>
                             </div>
                             <span class="progress-type">MongoDB</span>
