--- a/resume.html
+++ b/resume.html
@@ -51,14 +51,61 @@
             <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">Work History</h3>
+                        <h3 class="history-heading uppercase">Work History</h3>
                     </div>
                 </div>
+                <div class="timeline-item" data-dates="06/2015 - Current">
+                    <h4>East Lancashire Hospitals Trust (ELHT)</h4>
+                    <p>Diagnostic Radiology Assistant Practitioner</p>
+                </div>
+                <div class="timeline-item" data-dates="04/2011 - 06/2015">
+                    <h4>ASDA</h4>
+                    <p>Front-End Customer Service Assistant</p>
+                </div>
+                <div class="timeline-item" data-dates="05/2013 - 05/2014">
+                    <h4>Lancashire Teaching Hospitals Trust (LTHTR)</h4>
+                    <p>Student of Theraputic Radiography</p>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="history-heading uppercase">Educational History</h3>
+                    </div>
+                </div>
+                <div class="timeline-item" data-dates="05/2021 - Current">
+                    <h4>Code Institute (Edinburgh University)</h4>
+                    <p>Full-Stack Software Development</p>
+                    <p>GRADE: TBC</p>
+                </div>
+                <div class="timeline-item" data-dates="09/2015 - 08/2017">
+                    <h4>University of Central Lancashire</h4>
+                    <p>Diploma in Health and Social Care (Radiology Specialism)</p>
+                    <p>GRADE: Distinction</p>
+                </div>
+                <div class="timeline-item" data-dates="09/2010 - 08/2014">
+                    <h4>University of Liverpool</h4>
+                    <p>CertHE Radiotherapy</p>
+                </div>
+                <div class="timeline-item" data-dates="09/2012 - 08/2013">
+                    <h4>Southport College</h4>
+                    <p>City&Guilds PC Maintenance and Networking</p>
+                    <p>GRADE: Merit</p>
+                </div>
+                <div class="timeline-item" data-dates="09/2008 - 08/2010">
+                    <h4>King George V College, Southport</h4>
+                    <p>A-Levels: Biology(D), Psychology(D)</p>
+                    <p>AS-Levels: Sociology(D), Art(D), Health&Social Care(D), Information Technology(PASS)</p>
+                </div>
+                <div class="timeline-item" data-dates="09/2008 - 08/2010">
+                    <h4>Greenbank High School, Southport</h4>
+                    <p>GCSEs: Eglish(B), English Literature(B), Science(B), Mathematics(B)</p>
+                    <p>Design&Technology(A), Fine Art(B), Business Studies(C), French(C)</p>
+                </div>
             </div>
+            
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
-                        <h3 class="section-heading uppercase">My Skills</h3>
+                        <h3 class="section-heading uppercase">My Skills in Software Development</h3>
                     </div>
                 </div>
                 <div class="row">
@@ -194,6 +241,40 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase">Other Skills and Hobbies</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="skills-icon fas fa-tv" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Other Skills</h4>
+                                <p>
+                                    Other skills here
+                                </p>                                
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="skills-icon fas fa-cogs" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Hobbies</h4>
+                                <p>
+                                    Hobby text here                                    
+                                </p>
+                            </div>
+                        </div>
+                    </div>                    
+                </div>
             </div>
         </div>
     </section>
@@ -202,8 +283,8 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Full-stack software developer. Experience in HTML, CSS, JavaScript, Python, GitHub, Heroku, 
-                    Bootstrap, Django, SQL, communication, teamworking, collaboration. Capacity for structural and design thinking.
+                    Aspiring full-stack software developer. Experience in HTML, CSS, JavaScript, Python, GitHub, Heroku, 
+                    Bootstrap, communication, teamworking, collaboration.<br><br><br>    
                 </p>
             </div>
             <div class="col-sm-4">
