--- a/resume.html
+++ b/resume.html
@@ -250,26 +250,43 @@
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="skills-icon fas fa-tv" aria-hidden="true"></i>
+                                <i class="skills-icon fas fa-user-cog" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Other Skills</h4>
                                 <p>
-                                    Other skills here
+                                    Due to my long work history in healthcare settings I have gained a wealth of
+                                    experience in customer/client facing roles. I have become very adept at keeping
+                                    calm in stressful and time-restricted situations as well as become extremely
+                                    comfortable talking to colleagues from any department and position.<br>
+                                        During my time at ELHT I was in charge of carrying out and maintaining
+                                    machine Quality Assurance, ensuring that all equipment is fully functioning and 
+                                    functioning as intended - vital due to radiation safety legislation for the 
+                                    department, staff and patients.<br>
+                                        I am fully competent in all Microsoft Office applications including Word, PowerPoint,
+                                    Publisher, Excel and Outlook. 
                                 </p>                                
-                                </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="skills-icon fas fa-cogs" aria-hidden="true"></i>
+                                <i class="skills-icon fas fa-palette" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Hobbies</h4>
                                 <p>
-                                    Hobby text here                                    
+                                    <ul>
+                                        <li>CNC Machining</li>
+                                        <li>Rock Climbing</li>
+                                        <li>Trialthlon Training</li>
+                                        <li>Walking our two dogs</li>
+                                        <li>Art and Design</li>
+                                        <li>Web design</li>
+                                        <li>Event Planning</li>
+                                        <li>PC & Console Gaming</li>
+                                    </ul>                                  
                                 </p>
                             </div>
                         </div>
