Add some bottom margin to work and education history

--- a/resume.html
+++ b/resume.html
@@ -54,52 +54,56 @@
                         <h3 class="history-heading uppercase">Work History</h3>
                     </div>
                 </div>
-                <div class="timeline-item" data-dates="06/2015 - Current">
-                    <h4>East Lancashire Hospitals Trust (ELHT)</h4>
-                    <p>Diagnostic Radiology Assistant Practitioner</p>
-                </div>
-                <div class="timeline-item" data-dates="04/2011 - 06/2015">
-                    <h4>ASDA</h4>
-                    <p>Front-End Customer Service Assistant</p>
-                </div>
-                <div class="timeline-item" data-dates="05/2013 - 05/2014">
-                    <h4>Lancashire Teaching Hospitals Trust (LTHTR)</h4>
-                    <p>Student of Theraputic Radiography</p>
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="06/2015 - Current">
+                        <h4>East Lancashire Hospitals Trust (ELHT)</h4>
+                        <p>Diagnostic Radiology Assistant Practitioner</p>
+                    </div>
+                    <div class="timeline-item" data-dates="04/2011 - 06/2015">
+                        <h4>ASDA</h4>
+                        <p>Front-End Customer Service Assistant</p>
+                    </div>
+                    <div class="timeline-item" data-dates="05/2013 - 05/2014">
+                        <h4>Lancashire Teaching Hospitals Trust (LTHTR)</h4>
+                        <p>Student of Theraputic Radiography</p>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-12">
                         <h3 class="history-heading uppercase">Educational History</h3>
                     </div>
                 </div>
-                <div class="timeline-item" data-dates="05/2021 - Current">
-                    <h4>Code Institute (Edinburgh University)</h4>
-                    <p>Full-Stack Software Development</p>
-                    <p>GRADE: TBC</p>
-                </div>
-                <div class="timeline-item" data-dates="09/2015 - 08/2017">
-                    <h4>University of Central Lancashire</h4>
-                    <p>Diploma in Health and Social Care (Radiology Specialism)</p>
-                    <p>GRADE: Distinction</p>
-                </div>
-                <div class="timeline-item" data-dates="09/2010 - 08/2014">
-                    <h4>University of Liverpool</h4>
-                    <p>CertHE Radiotherapy</p>
-                </div>
-                <div class="timeline-item" data-dates="09/2012 - 08/2013">
-                    <h4>Southport College</h4>
-                    <p>City&Guilds PC Maintenance and Networking</p>
-                    <p>GRADE: Merit</p>
-                </div>
-                <div class="timeline-item" data-dates="09/2008 - 08/2010">
-                    <h4>King George V College, Southport</h4>
-                    <p>A-Levels: Biology(D), Psychology(D)</p>
-                    <p>AS-Levels: Sociology(D), Art(D), Health&Social Care(D), Information Technology(PASS)</p>
-                </div>
-                <div class="timeline-item" data-dates="09/2008 - 08/2010">
-                    <h4>Greenbank High School, Southport</h4>
-                    <p>GCSEs: Eglish(B), English Literature(B), Science(B), Mathematics(B)</p>
-                    <p>Design&Technology(A), Fine Art(B), Business Studies(C), French(C)</p>
-                </div>
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="05/2021 - Current">
+                        <h4>Code Institute (Edinburgh University)</h4>
+                        <p>Full-Stack Software Development</p>
+                        <p>GRADE: TBC</p>
+                    </div>
+                    <div class="timeline-item" data-dates="09/2015 - 08/2017">
+                        <h4>University of Central Lancashire</h4>
+                        <p>Diploma in Health and Social Care (Radiology Specialism)</p>
+                        <p>GRADE: Distinction</p>
+                    </div>
+                    <div class="timeline-item" data-dates="09/2010 - 08/2014">
+                        <h4>University of Liverpool</h4>
+                        <p>CertHE Radiotherapy</p>
+                    </div>
+                    <div class="timeline-item" data-dates="09/2012 - 08/2013">
+                        <h4>Southport College</h4>
+                        <p>City&Guilds PC Maintenance and Networking</p>
+                        <p>GRADE: Merit</p>
+                    </div>
+                    <div class="timeline-item" data-dates="09/2008 - 08/2010">
+                        <h4>King George V College, Southport</h4>
+                        <p>A-Levels: Biology(D), Psychology(D)</p>
+                        <p>AS-Levels: Sociology(D), Art(D), Health&Social Care(D), Information Technology(PASS)</p>
+                    </div>
+                    <div class="timeline-item" data-dates="09/2008 - 08/2010">
+                        <h4>Greenbank High School, Southport</h4>
+                        <p>GCSEs: Eglish(B), English Literature(B), Science(B), Mathematics(B)</p>
+                        <p>Design&Technology(A), Fine Art(B), Business Studies(C), French(C)</p>
+                    </div>
+                </div>    
             </div>
             
             <div class="col-md-8 bg-color-three-reasons section-column">
