--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
                                 <a href="contact.html"><i class="fas fa-comment" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-cv menu-item hvr-sweep-to-bottom">
-                                <a href="#"><i class="fas fa-download" aria-hidden="true"></i><span>CV Download</span></a>
+                                <a href="assets/cv/CV.pdf" target="_blank"><i class="fas fa-download" aria-hidden="true"></i><span>CV Download</span></a>
                             </li>
                         </ul>
                     </div>
@@ -312,7 +312,7 @@
                 <h5 class="uppercase general-sub">CV Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? <br>Download it here.
-                    <a href="#" target="_blank" class="cv-pdf">
+                    <a href="assets/cv/CV.pdf" target="_blank" class="cv-pdf">
                         <i class="fas fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download Link.</span>
                     </a>
