--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,26 @@
             </div>
         </div>
     </header>
-    <section>
+    <section class="container-fluid">
+        <div class="row bg-color-contact">
+            <div class="col">
+                <h3 class="contact-heading uppercase text-center">Need to contact me?</h3>
+                <h5 class="uppercase text-center">Please use the form below.</h5>
+
+                <div class="center-form">
+                    <form class="contact-form">
+                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required/>
+                        <input type="text" name="email" id="email" class="form-control" placeholder="Email Address" required/>
+                        <textarea rows="10" name="message" id="message" class="form-control" placeholder="Your message" required></textarea>
+                        <div class="form-row text-center">
+                            <div class="col">
+                                <button type="submit" class="btn btn-secondary">Send</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
 
     </section>
     <footer class="container-fluid">
