Add fa icon to send button in contact form

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                         <textarea rows="10" name="message" id="message" class="form-control" placeholder="Your message" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
-                                <button type="submit" class="btn btn-secondary">Send</button>
+                                <button type="submit" class="btn btn-secondary">Send <i class="fas fa-paper-plane"></i></button>
                             </div>
                         </div>
                     </form>
