--- a/interests.html
+++ b/interests.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
     <script src="https://kit.fontawesome.com/f73762c6c0.js" crossorigin="anonymous"></script> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">  
     <meta name="description" content="Online resume of Deanna Carina Sale">
     <meta name="keywords" content="Resume, CV, Deanna Sale, Software Developer">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <title>Deanna Carina Sale</title>
+    <title>Deanna Carina Sale | Interests</title>
 </head>
 <body>
     <header>
@@ -50,81 +51,37 @@
                     </div>
                 </div>
             </div>
-        </div>
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-conferences section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">Personal Info</h3>
+                        <h3 class="section-heading uppercase">
+                            Conferences And Meetups Attended
+                        </h3>
                     </div>
                 </div>
-                <div class="personal-info-item">
-                    <div class="key uppercase">
-                        <p>
-                            Name:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            Deanna Carina Sale
-                        </p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key uppercase">
-                        <p>
-                            Address:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            Preston, PR2 5TR, United Kingdom
-                        </p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key uppercase">
-                        <p>
-                            Phone Number:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            07990 738 832
-                        </p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key uppercase">
-                        <p>
-                            Email Address:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            deannacarina@gmail.com
-                        </p>
-                    </div>
-                </div>
+                <div id="map"></div>
             </div>
-            <div class="col-md-8 bg-color-three-reasons section-column">
+            <div class="col-md-8 bg-color-groups">
                 <div class="row">
                     <div class="col">
-                        <h3 class="section-heading uppercase">About Me</h3>
+                        <h3 class="section-heading uppercase">My Groups And Societies</h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fas fa-question-circle" aria-hidden="true"></i>
+                                <i class="interests-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <h4 class="three-reasons-heading uppercase">Coding Grace</h4>
                                 <p>
-                                    I am an aspiring full-stack software developer currently studying with Code Institute.                                 
+                                    Coding Grace are a group of developers based in Ireland who love to code and do other geeky and not necessarily crafty activities. Some of us code full-time, or just for fun (or both). We have people who are part of other technical user groups such as
+                                    Dublin ALT.NET, GameCraft, Python Ireland, Ruby Ireland and more.
+                                    <a href="https://codinggrace.com/" target="_blank">Coding Grace</a>
                                 </p>
                             </div>
                         </div>
@@ -132,13 +89,14 @@
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fas fa-thumbs-up" aria-hidden="true"></i>
+                                <i class="interests-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <h4 class="three-reasons-heading uppercase">Django Girls</h4>
                                 <p>
-                                    I follow form as well as function. I know that the aesthetics of effective design combined 
-                                    with application speed, security and reliability combine to create a great user experience.                                     
+                                    Django Girls is a non-profit organization and a community that empowers and helps women to organize free, one-day programming workshops by providing tools, resources and support. We are a volunteer run organization with hundreds of people contributing
+                                    to bring more amazing women into the world of technology.
+                                    <a href="https://djangogirls.org/" target="_blank">Django Girls</a>
                                 </p>
                             </div>
                         </div>
@@ -146,14 +104,29 @@
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fas fa-bolt" aria-hidden="true"></i>
+                                <i class="interests-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">WHy Hire Me?</h4>
+                                <h4 class="three-reasons-heading uppercase">Full Stack NY</h4>
                                 <p>
-                                    I work quickly and effectively in getting things built and working 
-                                    across the stack. I'm an excellent communicator who thrives in bright 
-                                    and enthusiastic teams and I'm also a self starter when working solo.                                    
+                                    Our meetup is an event where web designers and developers can come together to learn from and teach each other about emerging technologies. While speakers at Full Stack focus primarily on angularjs, react, node, hapiJS, espress, plain ole' JavaScript,
+                                    HTML, and CSS, we encourage all local web professionals to join us for vivid discussions around technology across the stack in any language.
+                                    <a href="https://www.meetup.com/javascript-full-stack-development/" target="_blank">Full Stack NY</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="interests-icon fa fa-users" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">IoT Nation</h4>
+                                <p>
+                                    IoT Nation's mission is to inspire, engage, and connect entrepreneurs, investors, professionals, & enthusiasts worldwide who are active in the Internet of Things (IoT). This group is for professionals and enthusiasts in the Internet of Things. We welcome
+                                    those who want to learn about this emerging field which is fascinating as IoT makes use of a diverse range of technologies and has the promise to impact a vast number of vertical markets.
+                                    <a href="https://www.meetup.com/NYCIOT/" target="_blank">IoT Nation</a>
                                 </p>
                             </div>
                         </div>
@@ -161,9 +134,8 @@
                 </div>
             </div>
         </div>
-
     </section>
-    <footer class="container-fluid">
+   <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
@@ -213,5 +185,8 @@
             </div>
         </div>
     </footer>
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
+    <script src="assets/js/maps.js"></script>
 </body>
 </html>
