--- a/resume.html
+++ b/resume.html
@@ -28,16 +28,22 @@
                 <div class="row no-gutters">
                     <div class="col">
                         <ul id="nav" class="list-inline menu-container">
-                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menu-item hvr-sweep-to-bottom">
+                            <li class="col-xs-6 col-sm-2 list-inline-item ui-menu-color-home menu-item hvr-sweep-to-bottom">
                                 <a href="index.html"><i class="fas fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menu-item hvr-sweep-to-bottom active">
+                            <li class="col-xs-6 col-sm-2 list-inline-item ui-menu-color-resume menu-item hvr-sweep-to-bottom">
                                 <a href="resume.html"><i class="fas fa-graduation-cap" aria-hidden="true"></i><span>Resumé</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menu-item hvr-sweep-to-bottom">
+                            <li class="col-xs-6 col-sm-2 list-inline-item ui-menu-color-interests menu-item hvr-sweep-to-bottom active">
+                                <a href="interests.html"><i class="fas fa-users" aria-hidden="true"></i><span>Interests</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 list-inline-item ui-menu-color-contact menu-item hvr-sweep-to-bottom active">
                                 <a href="contact.html"><i class="fas fa-comment" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-cv menu-item hvr-sweep-to-bottom">
+                            <li class="col-xs-6 col-sm-2 list-inline-item ui-menu-color-github menu-item hvr-sweep-to-bottom active">
+                                <a href="github.html"><i class="fab fa-github" aria-hidden="true"></i><span>GitHub</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 list-inline-item ui-menu-color-cv menu-item hvr-sweep-to-bottom">
                                 <a href="assets/cv/CV.pdf" target="_blank"><i class="fas fa-download" aria-hidden="true"></i><span>CV Download</span></a>
                             </li>
                         </ul>
