Add github api to resume

--- a/github.html
+++ b/github.html
@@ -8,7 +8,8 @@
     <script src="https://kit.fontawesome.com/f73762c6c0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/github.css"> 
     <link rel="stylesheet" href="assets/css/style.css">  
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/js/github.js"></script>
     <meta name="description" content="Online resume of Deanna Carina Sale">
     <meta name="keywords" content="Resume, CV, Deanna Sale, Software Developer">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
@@ -59,8 +60,8 @@
                 <h3 class="contact-heading uppercase text-center">View My GitHub Projects</h3>
                 <h5 class="uppercase text-center">You can also search on other user profiles</h5>
 
-                <div class="center-form">
-                    <input type="text" id="gh-username" value="octocat" oninput="fetchGitHubInformation()" />
+                <div class="center-form github-area">
+                    <input type="text" id="gh-username" value="DeannaCarina" oninput="fetchGitHubInformation()" />
                     <div id="gh-user-data"></div>
                     <div id="gh-repo-data"></div>
 
