--- a/interests.html
+++ b/interests.html
@@ -77,11 +77,11 @@
                                 <i class="interests-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Coding Grace</h4>
+                                <h4 class="three-reasons-heading uppercase">TBC</h4>
                                 <p>
-                                    Coding Grace are a group of developers based in Ireland who love to code and do other geeky and not necessarily crafty activities. Some of us code full-time, or just for fun (or both). We have people who are part of other technical user groups such as
+                                    <!-- Coding Grace are a group of developers based in Ireland who love to code and do other geeky and not necessarily crafty activities. Some of us code full-time, or just for fun (or both). We have people who are part of other technical user groups such as
                                     Dublin ALT.NET, GameCraft, Python Ireland, Ruby Ireland and more.
-                                    <a href="https://codinggrace.com/" target="_blank">Coding Grace</a>
+                                    <a href="https://codinggrace.com/" target="_blank">Coding Grace</a> -->
                                 </p>
                             </div>
                         </div>
@@ -107,11 +107,11 @@
                                 <i class="interests-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Full Stack NY</h4>
+                                <h4 class="three-reasons-heading uppercase">TBC</h4>
                                 <p>
-                                    Our meetup is an event where web designers and developers can come together to learn from and teach each other about emerging technologies. While speakers at Full Stack focus primarily on angularjs, react, node, hapiJS, espress, plain ole' JavaScript,
+                                    <!-- Our meetup is an event where web designers and developers can come together to learn from and teach each other about emerging technologies. While speakers at Full Stack focus primarily on angularjs, react, node, hapiJS, espress, plain ole' JavaScript,
                                     HTML, and CSS, we encourage all local web professionals to join us for vivid discussions around technology across the stack in any language.
-                                    <a href="https://www.meetup.com/javascript-full-stack-development/" target="_blank">Full Stack NY</a>
+                                    <a href="https://www.meetup.com/javascript-full-stack-development/" target="_blank">Full Stack NY</a> -->
                                 </p>
                             </div>
                         </div>
@@ -122,11 +122,11 @@
                                 <i class="interests-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">IoT Nation</h4>
+                                <h4 class="three-reasons-heading uppercase">TBC</h4>
                                 <p>
-                                    IoT Nation's mission is to inspire, engage, and connect entrepreneurs, investors, professionals, & enthusiasts worldwide who are active in the Internet of Things (IoT). This group is for professionals and enthusiasts in the Internet of Things. We welcome
+                                    <!-- IoT Nation's mission is to inspire, engage, and connect entrepreneurs, investors, professionals, & enthusiasts worldwide who are active in the Internet of Things (IoT). This group is for professionals and enthusiasts in the Internet of Things. We welcome
                                     those who want to learn about this emerging field which is fascinating as IoT makes use of a diverse range of technologies and has the promise to impact a vast number of vertical markets.
-                                    <a href="https://www.meetup.com/NYCIOT/" target="_blank">IoT Nation</a>
+                                    <a href="https://www.meetup.com/NYCIOT/" target="_blank">IoT Nation</a> -->
                                 </p>
                             </div>
                         </div>
