--- a/404.html
+++ b/404.html
@@ -12,9 +12,10 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
     <title>Deanna Carina Sale</title>
 </head>
-<body>
-    <h1>Hmm... Looks like something monsterous has happened!</h1>
-    <h3>Don't worry. Dee is looking into it. Click on the monster to head back to the home page.</h3>
+<body id="fourohfourbody">
+    <h1>404</h1>
+    <h2>Hmm... Looks like something monsterous has happened!</h2>
+    <h4>Don't worry. Dee is looking into it. Click on the monster to head back to the home page.</h4>
     <a href="index.html">
         <img src="assets/images/404.png" alt="monster-404">
     </a>
