--- a/interests.html
+++ b/interests.html
@@ -92,11 +92,11 @@
                                 <i class="interests-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Django Girls</h4>
+                                <h4 class="three-reasons-heading uppercase">TBC</h4>
                                 <p>
-                                    Django Girls is a non-profit organization and a community that empowers and helps women to organize free, one-day programming workshops by providing tools, resources and support. We are a volunteer run organization with hundreds of people contributing
+                                    <!-- Django Girls is a non-profit organization and a community that empowers and helps women to organize free, one-day programming workshops by providing tools, resources and support. We are a volunteer run organization with hundreds of people contributing
                                     to bring more amazing women into the world of technology.
-                                    <a href="https://djangogirls.org/" target="_blank">Django Girls</a>
+                                    <a href="https://djangogirls.org/" target="_blank">Django Girls</a> -->
                                 </p>
                             </div>
                         </div>
