Update CV and skills on Resume page

--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
                         <textarea rows="10" name="message" id="message" class="form-control" placeholder="Your message" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
-                                <button type="submit" class="btn btn-secondary" id="contact-button">Send <i class="fas fa-paper-plane"></i></button>
+                                <a href="https://8000-rose-kangaroo-ysm0g8no.ws-eu17.gitpod.io/thanks.html"><button type="submit" class="btn btn-secondary" id="contact-button">Send <i class="fas fa-paper-plane"></i></button></a>
                             </div>
                         </div>
                     </form>
