--- a/resume.html
+++ b/resume.html
@@ -220,26 +220,26 @@
                             <span class="progress-type">Heroku</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100" style="width:5%">
-                                <span class="sr-only">5% Complete</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width:5%">
+                                <span class="sr-only">25% Complete</span>
                             </div>
-                            <span class="progress-type">SQL</span>
+                            <span class="progress-type">PostgreSQL</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:10%">
-                                <span class="sr-only">10% Complete</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:10%">
+                                <span class="sr-only">0% Complete</span>
                             </div>
                             <span class="progress-type">PHP</span>
                         </div>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width:15%">
-                                <span class="sr-only">15% Complete</span>
+                                <span class="sr-only">10% Complete</span>
                             </div>
                             <span class="progress-type">GCP</span>
                         </div>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width:20%">
-                                <span class="sr-only">20% Complete</span>
+                                <span class="sr-only">15% Complete</span>
                             </div>
                             <span class="progress-type">AWS</span>
                         </div>
@@ -288,10 +288,7 @@
                                 <h4 class="three-reasons-heading uppercase">Hobbies</h4>
                                 <p>
                                     <ul>
-                                        <li>CNC Machining</li>
-                                        <li>Rock Climbing</li>
-                                        <li>Trialthlon Training</li>
-                                        <li>Walking our two dogs</li>
+                                        <li>Walking & Hiking</li>
                                         <li>Art and Design</li>
                                         <li>Web design</li>
                                         <li>Event Planning</li>
