update: Resume and interests

--- a/resume.html
+++ b/resume.html
@@ -61,7 +61,11 @@
                     </div>
                 </div>
                 <div class="history-items">
-                    <div class="timeline-item" data-dates="06/2015 - Current">
+                    <div class="timeline-item" data-dates="06/2022 - Current">
+                        <h4>East Lancashire Hospitals Trust (ELHT)</h4>
+                        <p>Trainee Clinical Coder</p>
+                    </div>
+                    <div class="timeline-item" data-dates="06/2015 - 06/2022">
                         <h4>East Lancashire Hospitals Trust (ELHT)</h4>
                         <p>Diagnostic Radiology Assistant Practitioner</p>
                     </div>
@@ -173,8 +177,11 @@
                                         <li><a href="https://deannacarina.github.io/travelcaribbean/" target="_blank" class="deployed-project">Portfolio Project 1 for Code Institute</a></li>
                                         <li><a href="https://deannacarina.github.io/HarryPotterQuiz/" target="_blank" class="deployed-project">Portfolio Project 2 for Code Institute</a></li>
                                         <li><a href="https://startrek-timeloop.herokuapp.com/" target="_blank" class="deployed-project">Portfolio Project 3 for Code Institute</a></li>
+                                        <li><a href="https://elht-rbs.herokuapp.com/" target="_blank" class="deployed-project">Portfolio Project 4 for Code Institute</a></li>
+                                        <li><a href="https://ecomenses.herokuapp.com/" target="_blank" class="deployed-project">Portfolio Project 5 for Code Institute</a></li>
                                         <li><a href="https://www.deeandtom.love/" target="_blank" class="deployed-project">Wedding Website for Dee & Tom</a></li>
                                         <li><a href="https://deannacarina.github.io/woodnook/" target="_blank" class="deployed-project">Business Website for 'Wood Nook'</a></li>
+                                        <li><a href="https://deannacarina.github.io/BCAwareness/" target="_blank" class="deployed-project">Hackathon Project: 'The Breast Review' in partnership with ITLabs</a></li>
                                     </ul>                              
                                 </p>
                             </div>
@@ -202,8 +209,8 @@
                             <span class="progress-type">JavaScript/JQuery</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
-                                <span class="sr-only">50% Complete</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+                                <span class="sr-only">40% Complete</span>
                             </div>
                             <span class="progress-type">Python/Django</span>
                         </div>
@@ -214,31 +221,19 @@
                             <span class="progress-type">GitHub</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                                <span class="sr-only">70% Complete</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                                <span class="sr-only">60% Complete</span>
                             </div>
                             <span class="progress-type">Heroku</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width:5%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width:25%">
                                 <span class="sr-only">25% Complete</span>
                             </div>
                             <span class="progress-type">PostgreSQL</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:10%">
-                                <span class="sr-only">0% Complete</span>
-                            </div>
-                            <span class="progress-type">PHP</span>
-                        </div>
-                        <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width:15%">
-                                <span class="sr-only">10% Complete</span>
-                            </div>
-                            <span class="progress-type">GCP</span>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width:20%">
                                 <span class="sr-only">15% Complete</span>
                             </div>
                             <span class="progress-type">AWS</span>
