--- a/interests.html
+++ b/interests.html
@@ -140,8 +140,7 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Aspiring full-stack software developer. Experience in HTML, CSS, JavaScript, Python, GitHub, Heroku, 
-                    Bootstrap, communication, teamworking, collaboration.<br><br><br>    
+                    Aspiring full-stack software developer. Experience in HTML, CSS (and Bootstrap), JavaScript, Python (Flask & Django), GitHub, Heroku, PostgreSQL, MongoDB, communication, teamworking, collaboration.<br><br><br>    
                 </p>
             </div>
             <div class="col-sm-4">
