update: Married surname

--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,10 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/f73762c6c0.js" crossorigin="anonymous"></script> 
     <link rel="stylesheet" href="assets/css/style.css">  
-    <meta name="description" content="Online resume of Deanna Carina Sale">
-    <meta name="keywords" content="Resume, CV, Deanna Sale, Software Developer">
+    <meta name="description" content="Online resume of Deanna Carina Wigley">
+    <meta name="keywords" content="Resume, CV, Deanna Wigley, Software Developer">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <title>Deanna Carina Sale | Contact</title>
+    <title>Deanna Carina Wigley | Contact</title>
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js">
     </script>
@@ -30,7 +30,7 @@
             <div class="col-md-8">
                 <div class="row bg-color-name-title no-gutters">
                     <div class="col heading">
-                        <h1 class="name">Deanna Carina Sale</h1>
+                        <h1 class="name">Deanna Carina Wigley</h1>
                         <h2 class="title">Full-Stack Software Developer</h2>
                     </div>
                 </div>
