--- a/404.html
+++ b/404.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
     <script src="https://kit.fontawesome.com/f73762c6c0.js" crossorigin="anonymous"></script> 
     <link rel="stylesheet" href="assets/css/style.css">  
-    <meta name="description" content="Online resume of Deanna Carina Sale">
-    <meta name="keywords" content="Resume, CV, Deanna Sale, Software Developer">
+    <meta name="description" content="Online resume of Deanna Carina Wigley">
+    <meta name="keywords" content="Resume, CV, Deanna Wigley, Software Developer">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <title>Deanna Carina Sale</title>
+    <title>Deanna Carina Wigley</title>
 </head>
 <body id="fourohfourbody">
     <h1>404</h1>
