--- a/github.html
+++ b/github.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="assets/css/style.css">  
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/js/github.js"></script>
-    <meta name="description" content="Online resume of Deanna Carina Sale">
-    <meta name="keywords" content="Resume, CV, Deanna Sale, Software Developer">
+    <meta name="description" content="Online resume of Deanna Carina Wigley">
+    <meta name="keywords" content="Resume, CV, Deanna Wigley, Software Developer">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <title>Deanna Carina Sale | GitHub</title>
+    <title>Deanna Carina Wigley | GitHub</title>
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
             <div class="col-md-8">
                 <div class="row bg-color-name-title no-gutters">
                     <div class="col heading">
-                        <h1 class="name">Deanna Carina Sale</h1>
+                        <h1 class="name">Deanna Carina Wigley</h1>
                         <h2 class="title">Full-Stack Software Developer</h2>
                     </div>
                 </div>
