--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
     <script src="https://kit.fontawesome.com/f73762c6c0.js" crossorigin="anonymous"></script> 
     <link rel="stylesheet" href="assets/css/style.css">  
-    <meta name="description" content="Online resume of Deanna Carina Sale">
-    <meta name="keywords" content="Resume, CV, Deanna Sale, Software Developer">
+    <meta name="description" content="Online resume of Deanna Carina Wigley">
+    <meta name="keywords" content="Resume, CV, Deanna Wigley, Software Developer">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <title>Deanna Carina Sale</title>
+    <title>Deanna Carina Wigley</title>
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
             <div class="col-md-8">
                 <div class="row bg-color-name-title no-gutters">
                     <div class="col heading">
-                        <h1 class="name">Deanna Carina Sale</h1>
+                        <h1 class="name">Deanna Carina Wigley</h1>
                         <h2 class="title">Full-Stack Software Developer</h2>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            Deanna Carina Sale
+                            Deanna Carina Wigley
                         </p>
                     </div>
                 </div>
