--- a/interests.html
+++ b/interests.html
@@ -8,10 +8,10 @@
     <script src="https://kit.fontawesome.com/f73762c6c0.js" crossorigin="anonymous"></script> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">  
-    <meta name="description" content="Online resume of Deanna Carina Sale">
-    <meta name="keywords" content="Resume, CV, Deanna Sale, Software Developer">
+    <meta name="description" content="Online resume of Deanna Carina Wigley">
+    <meta name="keywords" content="Resume, CV, Deanna Wigley, Software Developer">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <title>Deanna Carina Sale | Interests</title>
+    <title>Deanna Carina Wigley | Interests</title>
 </head>
 <body>
     <header>
@@ -22,7 +22,7 @@
             <div class="col-md-8">
                 <div class="row bg-color-name-title no-gutters">
                     <div class="col heading">
-                        <h1 class="name">Deanna Carina Sale</h1>
+                        <h1 class="name">Deanna Carina Wigley</h1>
                         <h2 class="title">Full-Stack Software Developer</h2>
                     </div>
                 </div>
