Update project links in resume

--- a/resume.html
+++ b/resume.html
@@ -176,9 +176,9 @@
                                     <ul class="project-list">
                                         <li><a href="https://deannacarina.github.io/travelcaribbean/" target="_blank" class="deployed-project">Portfolio Project 1 for Code Institute</a></li>
                                         <li><a href="https://deannacarina.github.io/HarryPotterQuiz/" target="_blank" class="deployed-project">Portfolio Project 2 for Code Institute</a></li>
-                                        <li><a href="https://startrek-timeloop.herokuapp.com/" target="_blank" class="deployed-project">Portfolio Project 3 for Code Institute</a></li>
-                                        <li><a href="https://elht-rbs.herokuapp.com/" target="_blank" class="deployed-project">Portfolio Project 4 for Code Institute</a></li>
-                                        <li><a href="https://ecomenses.herokuapp.com/" target="_blank" class="deployed-project">Portfolio Project 5 for Code Institute</a></li>
+                                        <li><a href="https://startrektimeloop.onrender.com/" target="_blank" class="deployed-project">Portfolio Project 3 for Code Institute</a></li>
+                                        <li><a href="https://elhtrbs.onrender.com" target="_blank" class="deployed-project">Portfolio Project 4 for Code Institute</a></li>
+                                        <li><a href="https://ecomenses.onrender.com/" target="_blank" class="deployed-project">Portfolio Project 5 for Code Institute</a></li>
                                         <li><a href="https://www.deeandtom.love/" target="_blank" class="deployed-project">Wedding Website for Dee & Tom</a></li>
                                         <li><a href="https://deannacarina.github.io/woodnook/" target="_blank" class="deployed-project">Business Website for 'Wood Nook'</a></li>
                                         <li><a href="https://deannacarina.github.io/BCAwareness/" target="_blank" class="deployed-project">Hackathon Project: 'The Breast Review' in partnership with ITLabs</a></li>
@@ -293,7 +293,7 @@
                                 <h4 class="three-reasons-heading uppercase">Hobbies</h4>
                                 <p>
                                     <ul>
-                                        <li>Walking & Hiking</li>
+                                        <li>Archery</li>
                                         <li>Art and Design</li>
                                         <li>Web design</li>
                                         <li>Event Planning</li>
