Update dates and title

--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
                 <div class="row bg-color-name-title no-gutters">
                     <div class="col heading">
                         <h1 class="name">Deanna Carina Wigley</h1>
-                        <h2 class="title">Full-Stack Software Developer</h2>
+                        <h2 class="title">General IT nerd, searching for a new adventure</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="history-items">
-                    <div class="timeline-item" data-dates="05/2021 - Current">
+                    <div class="timeline-item" data-dates="05/2021 - 08/2022">
                         <h4>Code Institute (Edinburgh University)</h4>
                         <p>Full-Stack Software Development</p>
                         <p>GRADE: TBC</p>
