--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                 <div class="row bg-color-name-title no-gutters">
                     <div class="col heading">
                         <h1 class="name">Deanna Carina Wigley</h1>
-                        <h2 class="title">Full-Stack Software Developer</h2>
+                        <h2 class="title">General IT nerd, searching for a new adventure</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
